# better-adb-sync

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/BetterADBSync/: SAOLogging.py  __init__.py  __main__.py  argparsing.py
src/BetterADBSync/FileSystems/: Android.py  Base.py  Local.py  date_utils.py
