[project]
name = "BetterADBSync"
version = "1.4.1"
description = "Better version of adb-sync for Python3"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/jpstotz/better-adb-sync/"

[project.scripts]
adbsync = "BetterADBSync:main"